syntax = "proto3";

package product;

service ProductService {
  rpc FindOne (ProductById) returns (ProductResponse);
  rpc FindMany (ProductsByIds) returns (ProductsResponse);
}

message ProductById {
  string id = 1;
}

message ProductsByIds {
  repeated string ids = 1;
}



message ProductResponse {
  string _id = 1;
  string slug = 2;
  string title = 3;
  double price = 4;
  string status = 5;
  int32 discount = 6;
  string variantName = 7;
  string optionName = 8;
  double stock = 9;
  string description = 10;
  string thumbnail = 11;
  int32 soldCount = 12;
  string brand = 13;
  string origin = 14;
  string shopId = 15;
  bool hasVariant = 16;
  repeated Variant variants = 17;
}


message Variant {
  string _id = 1;
  string name = 2;
  string value = 3;
  string image = 4;
  double price = 5;
  double stock = 6;
  string sku = 7;
}

message ProductsResponse {
  repeated ProductResponse items = 1;
}
